# quest-qmc

./: .gitignore  .hgignore  .pre-commit-config.yaml  Benchmark.md  BoundaryConditions.md  Download.md  HowToUse.md  LICENSE  Lieb_lattice_tutorial.md  Makefile  Output.md  PRG_FLAGS.md  Parallel_Time_Dependent_Measurement.md  ProjectHome.md  README  README.md  Tests.md  how_fast.md  how_to_add_new_measurements.md  input_parameters.md  make.inc  publications.md  pyproject.toml  requirements-dev.txt
BLAS/: Makefile
EXAMPLE/: Makefile  README.md
EXAMPLE/geom/: Makefile  ggeom.F90  in
EXAMPLE/test/: Makefile  test.F90
EXAMPLE/verify/: Makefile  verify.F90
LAPACK/: Makefile
OpenBLAS/: Makefile.conf  Makefile.conf_last  config_last.h  getarch  getarch_2nd
OpenBLAS/lapack-netlib/: make.inc
SRC/: Makefile  blas_mod.F90  change_gtau.F90  dqmc_2dperl.F90  dqmc_bonds.F90  dqmc_cfg.F90  dqmc_ckb.F90  dqmc_config.F90  dqmc_geom_wrap.F90  dqmc_geom_wrap.F90.orig  dqmc_gfun.F90  dqmc_gtau.F90  dqmc_hamilt.F90  dqmc_hubbard.F90  dqmc_kbonds.F90  dqmc_latt.F90  dqmc_matb.F90  dqmc_meas.F90  dqmc_omp.F90  dqmc_phy0.F90  dqmc_phy2.F90  dqmc_prefix.F90  dqmc_prefix_null.F90  dqmc_reclatt.F90  dqmc_seqb.F90  dqmc_simqmc.F90  dqmc_struct.F90  dqmc_stseqb.F90  dqmc_symm.F90  dqmc_tdm1.F90  dqmc_tdm2.F90  dqmc_util.F90  dqmc_wspace.F90  kernel_cpu.c++  lapack_mod.F90
SRC_fortran/: blaslapack.c++  blaslapack.h  computeg.c++  dqmc_2dperl.F90  dqmc_bonds.F90  dqmc_cfg.F90  dqmc_checkerboard.F90  dqmc_geom.F90  dqmc_geom_wrap.F90  dqmc_gfun.F90  dqmc_gtau.F90  dqmc_hubbard.F90  dqmc_include.h  dqmc_kbonds.F90  dqmc_latt.F90  dqmc_matb.F90  dqmc_mpi.F90  dqmc_omp.F90  dqmc_phy0.F90  dqmc_phy2.F90  dqmc_seqb.F90  dqmc_struct.F90  dqmc_tdm1.F90  dqmc_tdm2.F90  dqmc_util.F90  dqmc_wspace.F90  kernel_cpu.c++  profile.c++  profile.h
doc/: README  manual_old.tex
geometries/: 1d.geom  2Dinterface.geom  2Dinterface_small.geom  README.md  cubic.geom  honeycomb.geom  layers.geom  lieb.geom  square.geom  triangle.geom
geometries/templates/: honeycomb_template  input_template  kagome_anisotropic_template
makefiles/: make.inc.gcc  make.inc.icc  make.inc.mkl-gcc  make.inc.mkl-icc  make.inc.pg
src/: checkerboard.py  config.py  dqmc.py  geometry.py  green.py  gtau.py  hubbard.py  kbonds.py  kernels.py  lattice.py  measurements.py  parallel.py  reciprocal.py  structure.py  symmetry.py  tdm.py  utils.py  workspace.py
utils/benchmark/: benchmark.py  large_td0.in  large_td1.in  median_td0.in  median_td1.in  small_td0.in  small_td1.in  squareLarge.geom  squareMedian.geom
